tests/invalid/function/local_let_rec_mutable_capture.facet
fn main() -> unrestricted isize {
  let mut y: unrestricted isize = 1 in
  let rec [y] f(x: unrestricted isize) -> unrestricted isize {
    y
  }
  in (f 0)
}
